Add jvm flags
Because everyone likes them! \o/